# Omar

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  package.json  setup.py
.cursor/rules/implementing-tools/: RULE.md
apps/desktop/: README.md  main.js  package-lock.json  package.json
apps/frontend/: README.md  next.config.ts  package.json  vercel.json
apps/frontend/public/: manifest.json  robots.txt
apps/frontend/src/: middleware.ts
apps/frontend/translations/: de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  zh.json
apps/mobile/: BUILD_GUIDE.md  README.md  app.json  eas.json  package.json
apps/mobile/api/: config.ts  types.ts
apps/mobile/app/: +not-found.tsx  _layout.tsx  index.tsx  onboarding.tsx  setting-up.tsx
apps/mobile/hooks/: useAuth.ts
apps/mobile/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  zh.json
apps/mobile/stores/: kortix-computer-store.ts
backend/: api.py  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json
backend/evals/: README.md  __init__.py  agent_eval.py  datasets.py  eval_simple.py  runner.py  test_cases.json  test_quick.py  test_simple.py
backend/supabase/: config.toml  email-template.html
backend/tests/: __init__.py
sdk/: README.md  __init__.py  pyproject.toml
sdk/example/: example.py  mcp_server.py
sdk/kortix/: agent.py  kortix.py  thread.py  tools.py
src/: MainWindow.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gemini.rs  lib.rs  main.rs
src/components/: ChatView.tsx  SettingsContent.tsx
src/types/: index.ts
(+338 files in other folders)
