[package]
name = "omar-ai"
version = "0.1.0"
description = "OMAR AI - Web & Desktop AI Agent"
authors = ["you"]
edition = "2021"

[lib]
name = "omar_ai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "omar-ai-api"
path = "src/main.rs"

[dependencies]
# Core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }

# Web Server for Railway Backend
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
